[gd_scene load_steps=9 format=2]

[ext_resource path="res://GUI/Inventory/InventoryBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Entities/Entities/Machines/Furnace/FurnaceGUI.gd" type="Script" id=2]
[ext_resource path="res://GUI/GUISprite.gd" type="Script" id=3]
[ext_resource path="res://Shared/symbols.svg" type="Texture" id=4]
[ext_resource path="res://Shared/arrow_fill.shader" type="Shader" id=5]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float fill_amount : hint_range(0, 1.0) = 0.0;

void fragment() {
	vec4 color = MODULATE;
	float pixel_fill = step(1.0 - fill_amount, UV.y);
	
	COLOR = clamp(color + (color * pixel_fill), 0, 1);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/fill_amount = 0.0

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 5 )
shader_param/fill_amount = 0.0
shader_param/region_position = Vector2( 10, 10 )
shader_param/region_size = Vector2( 50, 50 )

[node name="FurnaceGUI" type="MarginContainer"]
margin_right = 69.0
margin_bottom = 80.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 69.0
margin_bottom = 80.0
custom_constants/separation = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 9.0
margin_bottom = 80.0
custom_constants/separation = 5

[node name="OreBar" parent="HBoxContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_left = 9.0
margin_right = 9.0
size_flags_horizontal = 8
slot_count = 1
item_filters = "Ore Lumber"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 5.0
margin_right = 9.0
margin_bottom = 80.0

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
modulate = Color( 0.188235, 0.462745, 1, 1 )
material = SubResource( 2 )
margin_right = 5.0
margin_bottom = 75.0
rect_min_size = Vector2( 5, 75 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FuelBar" parent="HBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 9.0
margin_right = 9.0
margin_bottom = 75.0
slot_count = 1
item_filters = "Fuels"

[node name="GUISprite" type="Control" parent="HBoxContainer"]
material = SubResource( 3 )
margin_left = 14.0
margin_top = 15.0
margin_right = 64.0
margin_bottom = 65.0
rect_min_size = Vector2( 50, 50 )
size_flags_vertical = 4
script = ExtResource( 3 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 10, 10, 50, 50 )

[node name="Output" parent="HBoxContainer" instance=ExtResource( 1 )]
margin_left = 69.0
margin_top = 40.0
margin_right = 69.0
margin_bottom = 40.0
size_flags_vertical = 4
alignment = 1
slot_count = 1
item_filters = "NIL"

[node name="Tween" type="Tween" parent="."]
[connection signal="inventory_changed" from="HBoxContainer/VBoxContainer/OreBar" to="." method="_on_OreBar_inventory_changed"]
[connection signal="inventory_changed" from="HBoxContainer/VBoxContainer/HBoxContainer/FuelBar" to="." method="_on_FuelBar_inventory_changed"]
